[gd_scene load_steps=14 format=2]

[ext_resource path="res://Ext/b_left.png" type="Texture" id=1]
[ext_resource path="res://Fonts/NotoSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Ext/cubeThing.png" type="Texture" id=3]
[ext_resource path="res://Fonts/NotoSerif-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Ext/Assets_Sounds_Click.wav" type="AudioStream" id=5]
[ext_resource path="res://Ext/checkmark.png" type="Texture" id=6]
[ext_resource path="res://Screens/ScreenSelectChapter/MselButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Screens/ScreenSelectChapter/MSelObj.gd" type="Script" id=8]
[ext_resource path="res://Screens/ScreenTitleMenu/baked_color.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 22
outline_size = 1
outline_color = Color( 0.65098, 0.490196, 0, 1 )
use_filter = true
extra_spacing_bottom = -12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 22
outline_size = 1
outline_color = Color( 0, 0.239216, 0.65098, 1 )
use_filter = true
extra_spacing_bottom = -8
font_data = ExtResource( 4 )

[node name="MSelObj" type="Control"]
anchor_right = 0.49
anchor_bottom = 0.115
margin_right = 99.2
margin_bottom = -0.200005
rect_min_size = Vector2( 800, 124 )
mouse_filter = 1
script = ExtResource( 8 )
__meta__ = {
"_editor_description_": "You can set the title and description using the 'title' and 'desc' variables."
}

[node name="LeftColoring" type="TextureRect" parent="."]
modulate = Color( 0.913725, 0.537255, 0, 1 )
use_parent_material = true
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
size_flags_horizontal = 3
texture = ExtResource( 10 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 500.0
margin_right = 620.0
margin_bottom = 125.0
texture = ExtResource( 3 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 57.0
margin_top = 3.18
margin_right = 174.0
margin_bottom = 53.18
custom_fonts/font = SubResource( 1 )
text = "Revive"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="."]
margin_left = 57.0
margin_top = 44.0
margin_right = 383.0
margin_bottom = 121.0
custom_fonts/normal_font = SubResource( 2 )
text = "Talk to Seele and Bronya."
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMain" type="Label" parent="."]
margin_top = 10.0
margin_right = 40.0
margin_bottom = 95.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 3 )
text = "M
a
i
n"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSub" type="Label" parent="."]
visible = false
margin_top = 10.0
margin_right = 40.0
margin_bottom = 95.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 4 )
text = "S
u
b"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
use_parent_material = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -31.0
margin_right = 970.0
margin_bottom = 31.0
size_flags_horizontal = 8
alignment = 2

[node name="TextureButton" parent="HBoxContainer" instance=ExtResource( 7 )]
margin_left = 401.0
margin_right = 588.0
hint_tooltip = ""

[node name="TextureButton2" parent="HBoxContainer" instance=ExtResource( 7 )]
margin_left = 592.0
margin_right = 779.0
hint_tooltip = ""

[node name="TextureButton3" parent="HBoxContainer" instance=ExtResource( 7 )]
margin_left = 783.0
margin_right = 970.0
hint_tooltip = ""

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Check" type="TextureRect" parent="."]
use_parent_material = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -25.0
margin_bottom = 25.0
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
use_parent_material = true
position = Vector2( 971, 9 )
texture = ExtResource( 6 )
